After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 761377 - Various fixes in preparation for xdg-app
Various fixes in preparation for xdg-app
Status: RESOLVED FIXED
Product: bijiben
Classification: Applications
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: Bijiben maintainer(s)
Bijiben maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2016-01-31 21:36 UTC by Cosimo Cecchi
Modified: 2016-02-01 22:58 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Rename search provider to use consistent app ID (3.88 KB, patch)
2016-01-31 21:36 UTC, Cosimo Cecchi
committed Details | Review
Rename desktop file to be consistent with app ID (1.83 KB, patch)
2016-01-31 21:36 UTC, Cosimo Cecchi
committed Details | Review
Rename appdata and XML mime file (1.50 KB, patch)
2016-01-31 21:36 UTC, Cosimo Cecchi
committed Details | Review
Rename icons to match app ID (5.52 KB, patch)
2016-01-31 21:36 UTC, Cosimo Cecchi
none Details | Review
Rename icons to match app ID (6.12 KB, patch)
2016-01-31 21:39 UTC, Cosimo Cecchi
committed Details | Review

Description Cosimo Cecchi 2016-01-31 21:36:16 UTC
See patches
Comment 1 Cosimo Cecchi 2016-01-31 21:36:19 UTC
Created attachment 320157 [details] [review]
Rename search provider to use consistent app ID

Use org.gnome.bijiben like the main application instead of
org.gnome.Bijiben.
Comment 2 Cosimo Cecchi 2016-01-31 21:36:23 UTC
Created attachment 320158 [details] [review]
Rename desktop file to be consistent with app ID

Instead of bijiben.desktop, we should follow the convention of desktop
ID matching app ID.
Comment 3 Cosimo Cecchi 2016-01-31 21:36:28 UTC
Created attachment 320159 [details] [review]
Rename appdata and XML mime file

For consistency.
Comment 4 Cosimo Cecchi 2016-01-31 21:36:32 UTC
Created attachment 320160 [details] [review]
Rename icons to match app ID

In preparation for xdg-app.
Comment 5 Cosimo Cecchi 2016-01-31 21:39:09 UTC
Created attachment 320161 [details] [review]
Rename icons to match app ID

In preparation for xdg-app.
Comment 6 Pierre-Yves Luyten 2016-02-01 21:15:56 UTC
Review of attachment 320157 [details] [review]:

.
Comment 7 Pierre-Yves Luyten 2016-02-01 21:21:19 UTC
Thanks!
Comment 8 Cosimo Cecchi 2016-02-01 22:58:41 UTC
Thanks, all pushed to master.

Attachment 320157 [details] pushed as 3164a7c - Rename search provider to use consistent app ID
Attachment 320158 [details] pushed as c4bdc6a - Rename desktop file to be consistent with app ID
Attachment 320159 [details] pushed as 562c7c3 - Rename appdata and XML mime file
Attachment 320161 [details] pushed as a4c6874 - Rename icons to match app ID