Rename search provider to use consistent app ID

Use org.gnome.bijiben like the main application instead of
org.gnome.Bijiben.

https://bugzilla.gnome.org/show_bug.cgi?id=761377